--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -14,6 +14,9 @@
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
+    <script src="/channel/bcsocket.js"></script>
+    <script src="/share/share.uncompressed.js"></script>
+    <script src="/share/textarea.js"></script>
     <script src="script.js"></script>
 </body>
 
